Added product Sales options